[package]
name = "nene-robo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1.24.1", features = ["full"] }
thiserror = "1.0.38"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.89"
regex = "1.7.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }
chrono = "0.4.23"
